--- a/AI.ipynb
+++ b/AI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,34 +59,117 @@
     "    return dis\n",
     "\n",
     "def cal_distance_array(M):\n",
+    "    n = len(M)\n",
     "    distance_array = []\n",
+    "    dis = [[0]*n for _ in range(n)]\n",
     "    for i in range(len(M)):\n",
     "        for j in range(i, len(M)):\n",
-    "            distance_array.append(get_distance_id(M[i], M[j]))\n",
-    "    return distance_array\n",
+    "            tmp_dis = get_distance_id(M[i], M[j])\n",
+    "            if tmp_dis>1e-12:\n",
+    "                distance_array.append(tmp_dis)\n",
+    "            dis[i][j], dis[j][i] = tmp_dis, tmp_dis\n",
+    "    return distance_array, dis\n",
     "\n",
-    "def cal_denisty(M):\n",
+    "def cal_density(M, dis, d_c):\n",
     "    n = len(M)\n",
-    "    distance\n",
+    "    total_des = 0\n",
+    "    density = []\n",
     "    for i in range(n):\n",
-    "        "
+    "        tmp = 0\n",
+    "        for j in range(n):\n",
+    "            if i==j:\n",
+    "                continue\n",
+    "            tmp += math.exp(-(dis[i][j]/d_c)**2)\n",
+    "        density.append(tmp)\n",
+    "    return density\n",
+    "\n",
+    "def cal_AI_index(density):\n",
+    "    AI_index = []\n",
+    "    for "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "lines = open(\"./output data/Porto/rnnTrain2.txt\").readlines()\n",
     "MD = [list( map(int, line.split(\" \")[2:])) for line in lines]\n",
-    "distance_array = cal_distance_array(MD[0])\n",
-    "distance_array = distance_array.sort()\n",
+    "distance_array, dis = cal_distance_array(MD[0])\n",
+    "distance_array.sort()\n",
+    "# print(distance_array)\n",
     "M = len(distance_array)\n",
     "t = 0.02\n",
     "d_c = distance_array[int(M * t)]\n",
-    "for i in "
+    "# print(d_c)\n",
+    "density = cal_density(MD[0], dis, d_c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.4236588907587127,\n",
+       " 2.0382745143166696,\n",
+       " 2.0295015080194414,\n",
+       " 1.5673898100922707,\n",
+       " 0.6534411874817972,\n",
+       " 0.671807724134734,\n",
+       " 0.8464609213858507,\n",
+       " 0.6502409090775764,\n",
+       " 0.5892274581345716,\n",
+       " 0.5520412495313985,\n",
+       " 0.36837066185791906,\n",
+       " 0.6999845232463945,\n",
+       " 0.8982309387663473,\n",
+       " 1.2225174057872585,\n",
+       " 1.6754463888160671,\n",
+       " 1.8725569503294086,\n",
+       " 1.7779331885413052,\n",
+       " 1.2565302387908932,\n",
+       " 1.025372025675567,\n",
+       " 0.8611125159508677,\n",
+       " 0.6092157174186043,\n",
+       " 0.3818557691102729,\n",
+       " 0.6145894920617009,\n",
+       " 0.48690147958890145,\n",
+       " 0.1692518005969767,\n",
+       " 0.34058073511888104,\n",
+       " 0.34670433573172266,\n",
+       " 0.17027651734947225,\n",
+       " 0.10533788435627083,\n",
+       " 0.11294111587361234,\n",
+       " 0.07980583467269253,\n",
+       " 0.07209507877817006,\n",
+       " 0.1691758192486095,\n",
+       " 0.17682218955394308,\n",
+       " 0.07183635735109513,\n",
+       " 0.07980999710088788,\n",
+       " 0.18479328559424824,\n",
+       " 0.17685000648119995,\n",
+       " 0.176814717418353,\n",
+       " 0.1690936587071332,\n",
+       " 0.05641230292525811,\n",
+       " 0.10634971896962445,\n",
+       " 0.24724451377609274,\n",
+       " 0.6181530434758264,\n",
+       " 0.6279802420000442,\n",
+       " 1.325702873439936,\n",
+       " 1.5239296526220136,\n",
+       " 1.0470856925984782]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
